--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,8 @@ spring.datasource.hikari.maximum-pool-size=50
 server.port = 8091
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.properties.hibernate.show_sql = true
+spring.jpa.show-sql=true
+#spring.datasource.initialization-mode=always
+#spring.jpa.hibernate.ddl-auto=update
+
 
