--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.port = 8091
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.properties.hibernate.show_sql = true
 spring.jpa.show-sql=true
-#spring.datasource.initialization-mode=always
-#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=update
 
 
