--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,6 @@ spring.jpa.properties.hibernate.show_sql = true
 spring.jpa.show-sql=true
 spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=update
+gambar.upload.directory=/path/ke/direktori/penyimpanan
 
 
