--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.username =root
-spring.datasource.password=
-spring.datasource.url = jdbc:mysql://localhost:3306/aske?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.password=2Gab6ef3cb4a325eF3G26AF1dBC51AhA
+spring.datasource.url = jdbc:mysql://viaduct.proxy.rlwy.net:28127/railway
 spring.datasource.type = com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.minimum-idle=10
 spring.datasource.hikari.maximum-pool-size=50
