--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,7 @@
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.username =root
-spring.datasource.password=2Gab6ef3cb4a325eF3G26AF1dBC51AhA
-spring.datasource.url = jdbc:mysql://viaduct.proxy.rlwy.net:28127/railway?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
-spring.datasource.type = com.zaxxer.hikari.HikariDataSource
-spring.datasource.hikari.minimum-idle=10
-spring.datasource.hikari.maximum-pool-size=50
-server.port = 8091
-spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.properties.hibernate.show_sql = true
-spring.jpa.show-sql=true
-spring.datasource.initialization-mode=always
-spring.jpa.hibernate.ddl-auto=update
-
-
 #spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 #spring.datasource.username =root
-#spring.datasource.password=
-#spring.datasource.url = jdbc:mysql://localhost:3306/aske
+#spring.datasource.password=2Gab6ef3cb4a325eF3G26AF1dBC51AhA
+#spring.datasource.url = jdbc:mysql://viaduct.proxy.rlwy.net:28127/railway?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 #spring.datasource.type = com.zaxxer.hikari.HikariDataSource
 #spring.datasource.hikari.minimum-idle=10
 #spring.datasource.hikari.maximum-pool-size=50
@@ -26,5 +11,20 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 #spring.datasource.initialization-mode=always
 #spring.jpa.hibernate.ddl-auto=update
+
+
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.username =root
+spring.datasource.password=
+spring.datasource.url = jdbc:mysql://localhost:3306/aske
+spring.datasource.type = com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.minimum-idle=10
+spring.datasource.hikari.maximum-pool-size=50
+server.port = 8091
+spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.properties.hibernate.show_sql = true
+spring.jpa.show-sql=true
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=update
 
 
